--- a/docs/190813/dabercro_hbb_190813.tex
+++ b/docs/190813/dabercro_hbb_190813.tex
@@ -165,7 +165,7 @@
   \item Network 1, training for $\Delta \eta$ and $\Delta \phi$
   \item Network 2, training for $\Delta \eta$ and $\Delta \phi$
   \item Feeding PF Candidate information through LSTM cells,
-    and merging with the dense network like 2
+    and merging with a dense network like 2
   \end{enumerate}
 
 \end{frame}
@@ -205,7 +205,8 @@
   \begin{itemize}
   \item Jet kinematics ($\eta, m_T, m, p_T, p_{TD}$)
   \item Jet energy fractions (charged, neutral; EM, hadronic)
-  \item Energy rings (charged, neutral, EM, muonic; $R < 0.05, 0.1, 0.2, 0.3, 0.4$)
+  \item Energy rings' energy fractions \\
+    (charged, neutral, EM, muonic; $R < 0.05, 0.1, 0.2, 0.3, 0.4$)
   \item Number of constituents
   \item Pileup ($\rho$)
   \item Vertex kinematics (location, significance, $m, n_\mathrm{trk}, p_T$)
@@ -219,7 +220,7 @@
 \begin{frame}
   \frametitle{Additional Information From PUPPI}
 
-  Each jet constituent split into
+  Each jet constituent four vector split into
 
   \begin{itemize}
   \item charged
@@ -283,7 +284,14 @@
 \begin{frame}
   \frametitle{Training Specs}
 
-  Other networks needed 5,000 to 10,000 steps to converge
+  \begin{itemize}
+  \item Networks needed a few thousands steps to converge
+  \item The LSTM had the least training steps at 2,000, due to time constraints
+  \item Loss has not improved significantly in the meanwhile (below)
+  \item A more thorough comparision will be prepared
+  \end{itemize}
+
+  \includegraphics[width=\linewidth]{Screenshot_2019-08-13_TensorBoard.png}
 
 \end{frame}
 
