--- a/docs/190814/backup_slides.tex
+++ b/docs/190814/backup_slides.tex
@@ -1,4 +1,76 @@
 \begin{frame}
+   \frametitle{\small 190814\_mass\_190725\_lstm\_pf/tt\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190725_lstm_pf/tt_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_puppi/tt\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_puppi/tt_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_origin/tt\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_origin/tt_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass/tt\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass/tt_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190725\_lstm\_pf/lightz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190725_lstm_pf/lightz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_puppi/lightz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_puppi/lightz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_origin/lightz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_origin/lightz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass/lightz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass/lightz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190725\_lstm\_pf/heavyz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190725_lstm_pf/heavyz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_puppi/heavyz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_puppi/heavyz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_origin/heavyz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_origin/heavyz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass/heavyz\_jet2\_deepCSV}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass/heavyz_jet2_deepCSV.pdf}
+\end{frame}
+
+\begin{frame}
    \frametitle{\small 190813\_testreg\_013/Jet\_puppi\_charged\_ptfrac}
    \centering
    \includegraphics[width=0.6\linewidth]{190813_testreg_013/Jet_puppi_charged_ptfrac.pdf}
@@ -23,15 +95,39 @@
 \end{frame}
 
 \begin{frame}
+   \frametitle{\small 190814\_mass\_190725\_lstm\_pf/signal\_hbb\_m\_190725\_lstm\_pf}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190725_lstm_pf/signal_hbb_m_190725_lstm_pf.pdf}
+\end{frame}
+
+\begin{frame}
    \frametitle{\small 190813\_bukin/signal\_hbb\_m\_190725\_lstm\_pf}
    \centering
    \includegraphics[width=0.6\linewidth]{190813_bukin/signal_hbb_m_190725_lstm_pf.pdf}
 \end{frame}
 
 \begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_puppi/signal\_hbb\_m\_190723\_puppi}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_puppi/signal_hbb_m_190723_puppi.pdf}
+\end{frame}
+
+\begin{frame}
    \frametitle{\small 190813\_bukin/signal\_hbb\_m}
    \centering
    \includegraphics[width=0.6\linewidth]{190813_bukin/signal_hbb_m.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass/signal\_hbb\_m}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass/signal_hbb_m.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190814\_mass\_190723\_origin/signal\_hbb\_m\_190723\_origin}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190814_mass_190723_origin/signal_hbb_m_190723_origin.pdf}
 \end{frame}
 
 \begin{frame}
@@ -47,21 +143,105 @@
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 190813\_ratio/signal\_hbb\_m\_190724\_puppi\_direction}
-   \centering
-   \includegraphics[width=0.6\linewidth]{190813_ratio/signal_hbb_m_190724_puppi_direction.pdf}
-\end{frame}
-
-\begin{frame}
    \frametitle{\small 190813\_bukin/signal\_hbb\_m\_190724\_origin\_direction}
    \centering
    \includegraphics[width=0.6\linewidth]{190813_bukin/signal_hbb_m_190724_origin_direction.pdf}
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 190813\_ratio/signal\_hbb\_m\_190724\_origin\_direction}
+   \frametitle{\small 190813\_validation/signal\_jet1\_tf\_190725\_lstm\_pf\_ptratio}
    \centering
-   \includegraphics[width=0.6\linewidth]{190813_ratio/signal_hbb_m_190724_origin_direction.pdf}
+   \includegraphics[width=0.6\linewidth]{190813_validation/signal_jet1_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/tt\_jet1\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/tt_jet1_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/lightz\_jet1\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/lightz_jet1_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/heavyz\_jet1\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/heavyz_jet1_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/signal\_jet2\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/signal_jet2_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/tt\_jet2\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/tt_jet2_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/lightz\_jet2\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/lightz_jet2_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/heavyz\_jet2\_tf\_190725\_lstm\_pf\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/heavyz_jet2_tf_190725_lstm_pf_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/signal\_jet1\_tf\_190723\_puppi\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/signal_jet1_tf_190723_puppi_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/lightz\_jet1\_tf\_190723\_puppi\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/lightz_jet1_tf_190723_puppi_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/signal\_jet2\_tf\_190723\_puppi\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/signal_jet2_tf_190723_puppi_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/lightz\_jet2\_tf\_190723\_puppi\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/lightz_jet2_tf_190723_puppi_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/signal\_jet1\_tf\_190723\_origin\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/signal_jet1_tf_190723_origin_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/lightz\_jet1\_tf\_190723\_origin\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/lightz_jet1_tf_190723_origin_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/signal\_jet2\_tf\_190723\_origin\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/signal_jet2_tf_190723_origin_ptratio.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 190813\_validation/lightz\_jet2\_tf\_190723\_origin\_ptratio}
+   \centering
+   \includegraphics[width=0.6\linewidth]{190813_validation/lightz_jet2_tf_190723_origin_ptratio.pdf}
 \end{frame}
 
 \begin{frame}
