Starting presentation slides almost a week in advance!

--- a/docs/presentation.tex
+++ b/docs/presentation.tex
@@ -103,7 +103,8 @@
 \beginbackup
 
 \begin{frame}
-  \frametitle{Backup Slides}
+  \centering
+    {\Huge \bf\sffamily Backup Slides}
 \end{frame}
 
 \input{backup_slides.tex}
