--- a/docs/191009/dabercro_hbb_191009.tex
+++ b/docs/191009/dabercro_hbb_191009.tex
@@ -1,11 +1,13 @@
 \documentclass{beamer}
 
 \author[D. Abercrombie]{
-  Daniel Abercrombie
+  \emph{Daniel Abercrombie} \\
+  Benedikt Maier \\
+  Christoph Paus
 }
 
 \title{\bf \sffamily b-jet Regression Update and Smearing Application}
-\date{\today}
+\date{October 9, 2019}
 
 \usecolortheme{dove}
 
@@ -96,10 +98,45 @@
   \frametitle{Outline}
 
   \begin{itemize}
-  \item Fixing the PUPPI information difference between MC and Data
+  \item Fixing difference between MC and Data in PUPPI network
   \item Evaluation of regression architectures using single jets \\
-    (not in the $Hbb$ signal region)
+    (not just in the $Hbb$ signal region)
   \item Smearing extraction and application
+  \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Brief Recap}
+  \link{Slides from previous talk here.}
+       {https://indico.cern.ch/event/788750/contributions/3529492/attachments/1893446/3123086/dabercro_hbb_190814.pdf}
+
+  \begin{itemize}
+  \item Trained on hadronic $t\bar{t}$ sample
+  \item Jet is matched to a gen-jet with a $B$ hadron inside \\
+    (from \texttt{reco::JetFlavourInfo::getbHadrons})
+  \item Reconstructed $p_T > \SI{15}{GeV}, |\eta| < 2.5$
+  \item Overlapping neutrinos are added to gen-jet for target $p_T$
+  \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Original Regression Inputs}
+
+  \begin{itemize}
+  \item Jet kinematics ($\eta, m_T, m, p_T, p_{TD}$)
+  \item Jet energy fractions (charged, neutral; EM, hadronic)
+  \item Energy rings' energy fractions \\
+    (charged, neutral, EM, muonic; $R < 0.05, 0.1, 0.2, 0.3, 0.4$)
+  \item Number of constituents
+  \item Pileup ($\rho$)
+  \item Vertex kinematics (location, significance, $m, n_\mathrm{trk}, p_T$)
+  \item Leading track $p_T$
+  \item Leading lepton kinematics ($p_T, \Delta R, p_{T\perp j}$)
+  \item One hot encoded lepton PDGID
   \end{itemize}
 
 \end{frame}
@@ -112,13 +149,9 @@
 
 
 \begin{frame}
-  \frametitle{Brief Recap of Last Talk}
-  \link{Slides from previous talk here.}
-       {https://indico.cern.ch/event/788750/contributions/3529492/attachments/1893446/3123086/dabercro_hbb_190814.pdf}
+  \frametitle{PUPPI Network}
 
   \begin{itemize}
-  \item Trained on hadronic $t\bar{t}$ sample
-  \item Overlapping neutrinos are added to gen-jet for target
   \item PUPPI splits energy into four categories
     \begin{itemize}
     \item charged
@@ -126,9 +159,10 @@
     \item neutral
     \item neutral pileup
     \end{itemize}
-  \item New variables included each category's $p_T$ over the jet $p_T$
-  \item PUPPI performed best when comparing performance in \\
-    $ZH \rightarrow \nu\nu bb$ resolved selection
+  \item New variable: each category's $p_T$ over the jet $p_T$
+    \begin{itemize}
+    \item Tried other variables ($\eta, \phi,$ \emph{etc.}), but no gain
+    \end{itemize}
   \item PUPPI infomation had poor agreement in MC and Data
   \end{itemize}
 
@@ -136,7 +170,7 @@
 
 
 \begin{frame}
-  \frametitle{Validation in Control Regions}
+  \frametitle{Validation in ZH Control Regions}
 
   Reminder: PUPPI regression behaves particularly poorly in $t\bar{t}$
 
@@ -170,13 +204,14 @@
 \begin{frame}
   \frametitle{Replacement Variable: PUPPI $p_T$ Over Raw Jet $p_T$}
 
-  \twofigs{Corrected Jet $p_T$}
-          {../../190911/figs/190815_validation/tt_jet1_puppi_charged_pt_jet1_pt.pdf}
-          {Raw Jet $p_T$}
-          {../../190911/figs/190830_puppi_raw/tt_jet1_puppi_charged_pt_jet1_rawPt.pdf}
+  \twofigs{Charged Fraction}
+          {190830_puppi_raw/tt_jet1_puppi_charged_pt_jet1_rawPt.pdf}
+          {Neutral Fraction}
+          {190830_puppi_raw/tt_jet1_puppi_neutral_pt_jet1_rawPt.pdf}
 
-  Agreement is not perfect,
-  but there is no longer a monotonically decreasing relation
+  Note the ratio pad changed. \\
+  Much better agreement than previous slide
+  % Remake plots if time
 
 \end{frame}
 
@@ -209,15 +244,67 @@
   \vspace{12pt}
 
   \begin{itemize}
-  \item No PUPPI: $\mu = 121.8 \pm 0.1$, $\sigma = 11.83 \pm 0.06$
-  \item Corrected $p_T$: $\mu = 125.0 \pm 0.1$, $\sigma = 11.80 \pm 0.06$
-  \item Raw $p_T$: $\mu = 124.1 \pm 0.1$, $\sigma = 11.75 \pm 0.06$
+  \item No PUPPI: $\mu = 121.8 \pm 0.1$, $\sigma = 11.83 \pm 0.06$ \\
+    \footnotesize{Relative resolution improves by: 12.6\%}
+  \item PUPPI $p_T$: $\mu = 124.1 \pm 0.1$, $\sigma = 11.75 \pm 0.06$ \\
+    \footnotesize{Relative resolution improves by: 14.8\%}
+  \item LSTM: $\mu = 124.5 \pm 0.1$, $\sigma = 12.22 \pm 0.06$ \\
+    \footnotesize{Relative resolution improves by: 11.7\%}
   \end{itemize}
-
-  Changing inputs does not cause significant perform loss
 
 \end{frame}
 
+
+\begin{frame}
+  \frametitle{Resolution in $p_{T, Z}$}
+
+  \begin{itemize}
+  \item Check the performance as a function of $p_{T, Z}$
+  \item 3 bins of MET
+    \begin{itemize}
+    \item $\SI{170}{GeV} \leq \mathrm{MET} < \SI{210}{GeV}$
+    \item $\SI{210}{GeV} \leq \mathrm{MET} < \SI{300}{GeV}$
+    \item $\SI{300}{GeV} \leq \mathrm{MET}$
+    \end{itemize}
+  \item Performed same fit as in previous slide
+  \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Resolution in $p_{T, Z}$}
+
+  \begin{tabular}{|l|c|c|c|c|}
+    \hline
+    \multicolumn{5}{|c|}{170 \leq \mathrm{MET} < 210} \\
+    \hline 
+    Network & \sigma [GeV] & \mu [GeV] & \sigma/\mu & Improvement \\
+    \hline
+    No training & 13.99 & 118.61 & 0.118 & -- \\
+    No PUPPI & 12.34 & 122.80 & 0.100 & 14.8\% \\
+    PUPPI & 12.29 & 123.36 & 0.100 & 15.5\% \\
+    LSTM & 12.96 & 123.39 & 0.105 & 11.0\% \\
+    \hline
+    \hline
+    \multicolumn{5}{|c|}{210 \leq \mathrm{MET} < 300} \\
+    \hline
+    No training & 13.10 & 120.53 & 0.109 & -- \\
+    No PUPPI & 11.57 & 123.49 & 0.094 & 13.8\% \\
+    PUPPI & 11.60 & 123.96 & 0.094 & 13.9\% \\
+    LSTM & 12.19 & 124.17 & 0.098 & 9.7\% \\
+    \hline
+    \hline
+    \multicolumn{5}{|c|}{300 \leq \mathrm{MET}} \\
+    \hline
+    No training & 11.79 & 123.80 & 0.095 & -- \\
+    No PUPPI & 10.35 & 125.76 & 0.082 & 13.6\% \\
+    PUPPI & 10.25 & 126.29 & 0.081 & 14.8\% \\
+    LSTM & 10.71 & 126.24 & 0.085 & 10.9\% \\
+    \hline
+  \end{tabular}
+
+\end{frame}
 
 \begin{frame}
   \centering
@@ -228,10 +315,13 @@
 \begin{frame}
   \frametitle{Relative Resolution}
 
+  Resolution improvement for the original network is shown \\
+  We can see regression compared to applying JECs
+
   \twofigs{Function of $\eta$}
-          {190927_violin_190723_origin/bjetreg_2018_violin_eta_Hbb_dreg_2018_wide.pdf}
+          {191004_violin_190723_origin_2/bjetreg_2018_violin_eta_Hbb_dreg_2018_wide.pdf}
           {Function of $p_T$}
-          {190927_violin_190723_origin/bjetreg_2018_violin_Hbb_dreg_2018_wide.pdf}
+          {191004_violin_190723_origin_2/bjetreg_2018_violin_Hbb_dreg_2018_wide.pdf}
 
 \end{frame}
 
@@ -239,12 +329,12 @@
 \begin{frame}
   \frametitle{Improvement from PUPPI Information}  
 
-  Based on resolution metric, PUPPI information improves for all $\eta$ and $p_T$
+  PUPPI information improves resolution for all $\eta$ and $p_T$
 
   \twofigs{Function of $\eta$}
-          {191003_compareres/plot_compare_eta.pdf}
-          {Function of $p_T$}
-          {191003_compareres/plot_compare_pt.pdf}
+          {191004_compareres/plot_compare_eta.pdf}
+          {Function of gen $p_T$}
+          {191004_compareres/plot_compare_pt.pdf}
 
 \end{frame}
 
@@ -256,22 +346,66 @@
 
 
 \begin{frame}
+  \frametitle{Selection}
+
+  \begin{itemize}
+  \item Oppositely charged muons
+    \begin{itemize}
+    \item $p_T > \SI{20}{GeV}$
+    \item Reliso $< 0.25$
+    \item $|\eta| < 2.4$
+    \item $\Delta xy < 0.5, \Delta z < 1.0$
+    \item Loose
+    \end{itemize}
+  \item $p_{T, \ell\ell} > \SI{100}{GeV}$
+  \item $\Delta \phi(j_1, \ell\ell) > 2.8$
+  \item Leading Jet Deep CSV $> 0.9$
+  \item $\frac{p_{T, j_2}}{p_{T, \ell\ell}} = \alpha < 0.3$
+  \item Di-muon Triggers:
+    \begin{itemize}
+    \item \texttt{HLT\_Mu17\_TrkIsoVVL\_Mu8\_TrkIsoVVL\_DZ\_Mass3p8}
+    \item \texttt{HLT\_Mu17\_TrkIsoVVL\_Mu8\_TrkIsoVVL\_DZ\_Mass8}
+    \end{itemize}
+  \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
   \frametitle{Data/MC Comparison}
 
-  Binned in $\alpha = \frac{p_{T, \mathrm{trailing jet}}}{p_{T, \ell\ell}}$
+  Binned in $\alpha = \frac{p_{T, j_2}}{p_{T, \ell\ell}}$
   to get resolution in MC and Data
 
   \centering
   \includegraphics[width=0.6\linewidth]{191002_tosmear/smearplot_1_jet1_190904_0_2_pt_dilep_corr_pt.pdf}
 
+  PUPPI network evaluated from $0.125 < \alpha < 0.155$
+
 \end{frame}
+
+
+\begin{frame}
+  \frametitle{Resolution Definition}
+
+  \begin{itemize}
+  \item 5 $\alpha$ bins
+    \begin{itemize}
+    \item Bounds: [0, 0.125, 0.155, 0.185, 0.245, 0.3]
+    \end{itemize}
+  \item For each alpha bin, get the standard deviation for data and MC histograms
+  \end{itemize}
+
+\end{frame}
+
 
 \begin{frame}
   \frametitle{Fit Results}
 
-  Smearing factors were extracted from fit in $\alpha$
+  Smearing factors were extracted from fit of $\sigma$ as function of $\alpha$
 
   \centering
+  \vspace{12pt}
   \includegraphics[width=0.6\linewidth]{191003_resolution_tosmear/resolution_190904_0_2.pdf}
 
   \[
@@ -283,35 +417,99 @@
 
 
 \begin{frame}
-  \frametitle{Application of Smearing}
+  \frametitle{Smearing Application}
 
-  Agreement of resolution at $\alpha = 0$ is much better after smearing
+  Assuming a Gaussian distribution gives simple smearing scheme
 
-  \centering
-  \includegraphics[width=0.6\linewidth]{191003_resolution_smeared/resolution_190904_0_2.pdf}
+  \[
+  p_{T, smear} = p_T + G(0, \sigma_{smear}) \times p_{T, gen}
+  \]
+
+  \begin{itemize}
+  \item $G(\mu, \sigma)$ is a random number drawn from a Gaussian distribution
+    with mean $\mu$ and width of $\sigma$.
+  \item $p_T$ is the transverse momentum after applying the regression
+  \item $p_{T, gen}$ is of the matched gen jet, or $p_T$ if none matched
+  \end{itemize}
 
 \end{frame}
 
 
 \begin{frame}
-  todo: Dissection of dector regions to compare performance of smearing
+  \frametitle{Application of Smearing -- Original}
+
+  Agreement of resolution at $\alpha = 0$ is much better after smearing
+
+  \twofigs{Before Smearing}
+          {191003_resolution_tosmear/resolution_190723_origin_2.pdf}
+          {After Smearing}
+          {191003_resolution_smeared/resolution_190723_origin_2.pdf}
+
+  \[
+  \sigma_{smear} = 0.104
+  \]
+
 \end{frame}
+
+
+\begin{frame}
+  \frametitle{Application of Smearing -- PUPPI}
+
+  Agreement of resolution at $\alpha = 0$ is much better after smearing
+
+  \twofigs{Before Smearing}
+          {191003_resolution_tosmear/resolution_190904_0_2.pdf}
+          {After Smearing}
+          {191003_resolution_smeared/resolution_190904_0_2.pdf}
+
+  \[
+  \sigma_{smear} = 0.112
+  \]
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Application of Smearing -- LSTM}
+
+  Agreement of resolution at $\alpha = 0$ is much better after smearing
+
+  \twofigs{Before Smearing}
+          {191003_resolution_tosmear/resolution_190725_lstm_pf.pdf}
+          {After Smearing}
+          {191003_resolution_smeared/resolution_190725_lstm_pf.pdf}
+
+  \[
+  \sigma_{smear} = 0.110
+  \]
+
+\end{frame}
+
+
+% \begin{frame}
+%   todo: Dissection regions (jet $p_T, \eta, \phi$) to compare performance of smearing
+% \end{frame}
 
 
 \begin{frame}
   \frametitle{Conclusions}
 
   \begin{itemize}
-  \item Discrepency in PUPPI information fixed by using raw $p_T$
-  \item Network performs better in previous metric as well as when considering
-    b-jets alone in general
+  \item Discrepancy in PUPPI information fixed by using raw $p_T$
+    \begin{itemize}
+    \item Same as scaling individual PF Candidates by JECs for ratio
+    \end{itemize}
+  \item PUPPI variables improve di-jet and single jet resolutions
   \item Smearing factors are extracted and successfully applied
+    \begin{itemize}
+    \item Same as previous training (roughly 10\%)
+    \item PUPPI requires more smearing than previous architecture
+    \end{itemize}
   \end{itemize}
 
 \end{frame}
 
 
-\begin{comment}
 \beginbackup
 
 \begin{frame}
@@ -320,8 +518,8 @@
 \end{frame}
 
 \input{backup_slides.tex}
+\input{backup_slides_mod.tex}
 
 \backupend
-\end{comment}
 
 \end{document}
